# socketpoll

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yaml
include/: event_poll.hpp  socket.hpp
src/poll/: poll_epoll.cpp  poll_kqueue.cpp  poll_winsock.cpp
src/socket/: socket_posix.cpp  socket_win.cpp
tests/: CMakeLists.txt  server_test.cpp  test_main.cpp  test_poll.cpp  test_socket.cpp  test_utils.hpp
tools/: check-all.sh  check-format.sh  format.sh  tidy.sh
